<resources>
    <string name="app_name">Safe</string>
    <string name="safe_v_by_no1_nrc7">Safe v%1$s By No1_NrC7</string>
    <string name="scan">Scan</string>
    <string name="make">Make</string>
    <string name="clear">Clear</string>
    <string name="copy">Copy</string>
    <string name="from_gallery">From Gallery</string>
    <string name="text_hint">Text from QR code or to be made into QR code</string>
    <string name="decode_input_hint">Please input the text to be decoded.</string>
    <string name="scan_notification">Click the Scan button to scan QR code</string>
    <string name="error_scanning_qr">Error scanning QR code</string>
    <string name="error_creating_qr">No text to create QR code</string>
    <string name="error_saving_qr">Error saving QR code</string>
    <string name="qr_saved">QR code saved</string>
    <string name="qr_saved_count">%d QR codes saved</string>
    <string name="no_qr_detected">No QR code detected</string>
    <string name="permission_camera_rationale">Camera permission is needed for QR code scanning</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="qr_code">QR Code</string>
    <string name="permission_storage_rationale">Storage permission is needed to load images</string>
    <string name="save">Save</string>
    <string name="decode">Decode</string>
    <string name="enter_password">Enter Password</string>
    <string name="password_hint">Password</string>
    <string name="confirm">Confirm</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="verifying_password">Verifying password...</string>
    <string name="error_verifying_password">Error verifying password</string>
    <string name="vault_migration_aborted">Your data still uses the old password protection, because %1$s cannot be decrypted. Remove or fix it, then unlock again to upgrade.</string>
    <string name="create_password">Create Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="create">Create</string>
    <string name="create_settings_title">Create New Settings</string>
    <string name="settings_name_hint">Enter Settings Name</string>
    <string name="create_settings">Create Settings</string>
    <string name="please_enter_settings_name">Please enter a settings name</string>
    <string name="menu_my_keys">My Keys</string>
    <string name="menu_secrets">Secrets</string>
    <string name="menu_convert">Convert</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_tx">TX</string>
    <string name="menu_multisig">Multisig</string>
    <string name="menu_sign_words">Sign Words</string>
    <string name="menu_verify">Verify</string>
    <string name="menu_encrypt">Encrypt</string>
    <string name="menu_decrypt">Decrypt</string>
    <string name="menu_hash">Hash</string>
    <string name="menu_decode">Decode</string>
    <string name="menu_string_converter">String Converter</string>
    <string name="menu_qr_code">QR Code</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_test">Test</string>
    <string name="home_slogan">Protect your passwords, keys, secrets and privacy with cryptography</string>
    <string name="failed_decode">Could not decode. Please check the text.</string>
    <string name="hash_input_hint">Enter text to be hashed</string>
    <string name="failed_hash">Failed to hash input</string>
    <string name="hash">Hash</string>
    <string name="find_a_nice_fid">Find a Nice FID</string>
    <string name="random_keys">Random Keys</string>
    <string name="input_fid">Input FID</string>
    <string name="Input_prikey">Input PriKey</string>
    <string name="Input_prikey_cipher">Input PriKey Cipher</string>
    <string name="Input_pubkey">Input PubKey</string>
    <string name="return_string">Return String</string>
    <string name="symkey">Symkey</string>
    <string name="password">Password</string>
    <string name="pubkey">Pubkey</string>
    <string name="encrypt">Encrypt</string>
    <string name="decrypt">Decrypt</string>
    <string name="encrypted_result">Encrypted Result</string>
    <string name="input_text_to_be_encrypted">Input text to be encrypted</string>
    <string name="input_key">Input the key</string>
    <string name="input_text_to_be_decrypted">Input text to be decrypted</string>
    <string name="input_cipher">Input cipher</string>
    <string name="input_text_to_be_hashed">Input text to be hashed</string>
    <string name="input_text_to_be_decoded">Input text to be decoded</string>
    <string name="input_text_to_be_verified">Input text to be verified</string>
    <string name="input_text_to_be_signed">Input text to be signed</string>
    <string name="input_text_to_be_multi_signed">Input text to be multi-signed</string>
    <string name="result">Result</string>
    <string name="input_text_to_be_operated">Input the text to be operated</string>
    <string name="sign">Sign</string>
    <string name="sign_msg">Sign Words</string>
    <string name="input_the_symmetric_key">Input the symmetric Key</string>
    <string name="input_the_private_key">Input the private Key</string>
    <string name="please_input_message">Please input message to sign</string>
    <string name="please_input_key">Please input key</string>
    <string name="copied">Copied to clipboard</string>
    <string name="sym_key_has_to_be_a_hex_of_32_bytes">SymKey has to be a hex string of 32 bytes</string>
    <string name="verify">Verify</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="more">More</string>
    <string name="input_phrase">Input Phrase</string>
    <string name="menu_random">Random</string>
    <string name="menu_private_key_converter">Private Key Converter</string>
    <string name="menu_public_key_converter">Public Key Converter</string>
    <string name="menu_address_converter">Address Converter</string>
    <string name="number_of_bytes">Number of bytes</string>
    <string name="new_str">New</string>
    <string name="format_hex">Hex</string>
    <string name="format_integer">Integer</string>
    <string name="format_base58">Base58</string>
    <string name="format_base64">Base64</string>
    <string name="too_large_for_integer">Too large for integer format</string>
    <string name="create_multisig_fid">Create Multisig FID</string>
    <string name="create_multisig_tx">Create Multisig TX</string>
    <string name="sign_multisig_tx">Sign Multisig TX</string>
    <string name="build_multisig_tx">Build Multisig TX</string>
    <string name="required_signer_number">Required signer number</string>
    <string name="ending_with">Ending with</string>
    <string name="input_the_pubkey">Input the pubkey</string>
    <string name="input_the_prikey">Input the PriKey</string>
    <string name="input_the_text_to_be_decoded">Input the text to be decoded</string>
    <string name="input_the_cipher">Input the cipher</string>
    <string name="input_the_text_to_be_encrypted">Input the text to be encrypted</string>
    <string name="input_the_signature">Input the signature</string>
    <string name="input_the_fid">Input the FID</string>
    <string name="input_the_label">Input the label</string>
    <string name="input_the_phrase">Input the phrase</string>
    <string name="input_the_prikeycipher">Input the priKeyCipher</string>
    <string name="input_the_password">Input the password</string>
    <string name="cipher">Cipher</string>
    <string name="signature">Signature</string>
    <string name="delete">Delete</string>
    <string name="preview">Preview</string>
    <string name="input_the_pubkey_or_address">Input the pubkey or address</string>
    <string name="only_for_sym_key_sign">Only for SymKey sign</string>
    <string name="verification_result">Verification result</string>
    <string name="input_the_key">Input the key</string>
    <string name="add_member">Add Member</string>
    <string name="done">Done</string>
    <string name="import_tx">Import</string>
    <string name="add">Add</string>
    <string name="input_the_text_carved_on_chain">Input the text carved on chain</string>
    <string name="sender_from_script_or_multisig">Sender from script or multisig JSON</string>
    <string name="add_payee">Add payee</string>
    <string name="add_cash_to_spend">Add cash to spend</string>
    <string name="please_input_required_signer_number">Please input required signer number</string>
    <string name="invalid_signer_number">Invalid signer number</string>
    <string name="no_enough_members">No enough members</string>
    <string name="the_members_can_t_more_than_16">The members can\'t more than 16</string>
    <string name="please_input_a_public_key">Please input a public key</string>
    <string name="invalid_public_key">Invalid public key</string>
    <string name="txid">TxId</string>
    <string name="index">Index</string>
    <string name="amount">Amount</string>
    <string name="fid">FID</string>
    <string name="avatar">Avatar</string>
    <string name="choose_multisig_id">Choose Multisig ID</string>
    <string name="no_multisig_found">No multisig found</string>
    <string name="signed">Signed</string>
    <string name="sender">Sender</string>
    <string name="spending">Spending</string>
    <string name="send_to">Send to</string>
    <string name="unsigned">Unsigned</string>
    <string name="confirm_multisig_tx">Confirm Multisig TX</string>
    <string name="as_hex">Bytes in Hex</string>
    <string name="people">People</string>
    <string name="import_the_tx_json">Import the TX JSON</string>
    <string name="copy_tx">Copy TX</string>
    <string name="create_tx">Create TX</string>
    <string name="make_qr">Make QR</string>
    <string name="carving">Carving</string>
    <string name="m_n">m/n</string>
    <string name="need_signs">Need Signs</string>
    <string name="import_multisig_tx">Import Multisig TX</string>
    <string name="build">Build</string>
    <string name="copy_result">Copy Result</string>
    <string name="built_you_can_broadcast_it">Built! You can broadcast it.</string>
    <string name="failed_to_build_multisig_tx">Failed to build multisig TX.</string>
    <string name="add_to_fid_list">Add to FID list</string>
    <string name="clear_fid_list">Clear FID list</string>
    <string name="added_to_fid_list">Added to FID list.</string>
    <string name="fid_list_cleared">FID list cleared</string>
    <string name="failed_to_create_avatar">Failed to create avatar</string>
    <string name="sign_tx">Sign Transaction</string>
    <string name="pay_to_each">Pay to each:</string>
    <string name="spending_cash_ids">Spending cash IDs</string>
    <string name="import_keys">Import keys</string>
    <string name="security_guidelines">Security Guidelines</string>
    <string name="sha256" translatable="false">SHA256</string>
    <string name="sha256x2" translatable="false">SHA256x2</string>
    <string name="md5" translatable="false">MD5</string>
    <string name="sha1" translatable="false">SHA1</string>
    <string name="sha3" translatable="false">SHA3</string>
    <string name="ripemd160" translatable="false">RIPEMD160</string>
    <string name="change_password">Change password</string>
    <string name="backup_all_keys">Backup all keys</string>
    <string name="backup_all_secrets">Backup all secrets</string>
    <string name="import_secrets">Import secrets</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="remove_me">Remove me</string>
    <string name="time">Time</string>
    <string name="all">All</string>
    <string name="sort_by_time">Sort by Time</string>
    <string name="sort_by_type">Sort by Type</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="type">Type</string>
    <string name="title">Title</string>
</resources>