<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="16dp"
    android:background="@color/stroke_color"
    android:gravity="center_vertical">

    <LinearLayout
        android:id="@+id/sort_time_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/sort_time_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_sort_desc"
            android:contentDescription="@string/sort_by_time"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort_type_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/sort_type_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_sort_none"
            android:contentDescription="@string/sort_by_type"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sort_title_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/colorAccent"
            android:textSize="14sp"
            android:layout_marginEnd="4dp"/>

        <ImageView
            android:id="@+id/sort_title_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_sort_none"
            android:contentDescription="@string/sort_by_title"/>
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_weight="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all"
        android:textColor="@color/text_color"
        android:textSize="14sp"
        android:layout_marginEnd="0dp"/>

    <CheckBox
        android:id="@+id/checkbox_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        />

</LinearLayout>
