<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="?android:attr/colorBackground"
    android:padding="8dp">

    <TextView
        android:id="@+id/import_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/import_keys"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:id="@+id/input_phrase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/input_phrase"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>
    <TextView
        android:id="@+id/from_pri_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/Input_prikey"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:id="@+id/from_pri_key_cipher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/Input_prikey_cipher"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:id="@+id/from_pub_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/Input_pubkey"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:id="@+id/input_fid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/input_fid"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:id="@+id/find_nice_fid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/find_a_nice_fid"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?attr/selectableItemBackground"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>

    <TextView
        android:id="@+id/create_new_keys"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/random_keys"
        android:textSize="16sp"
        android:textColor="?android:attr/textColorPrimary"
        android:background="?attr/selectableItemBackground"/>

</LinearLayout> 